--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -76,6 +76,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TitleStartObject.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CyberPeacockAreaLevel.cpp">
@@ -132,6 +136,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TitleLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TitleStartObject.cpp">
       <SubType>
       </SubType>
     </ClCompile>
