--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -39,6 +39,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CharacterSelectZeroIcon.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="CharacterSelectZeroImage.h">
       <SubType>
       </SubType>
@@ -123,6 +127,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CharacterSelectUpperText.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="CharacterSelectZeroIcon.cpp">
       <SubType>
       </SubType>
     </ClCompile>
