--- a/APIApp/GameEngineBase/GameEngineBase.vcxproj
+++ b/APIApp/GameEngineBase/GameEngineBase.vcxproj
@@ -170,6 +170,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="GameEngineRandom.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="GameEngineString.cpp">
       <SubType>
       </SubType>
@@ -194,6 +198,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="GameEnginePath.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="GameEngineRandom.h">
       <SubType>
       </SubType>
     </ClInclude>
