--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -112,6 +112,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TestWall.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TitleBackground.h">
       <SubType>
       </SubType>
@@ -216,6 +220,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TestLevelMap.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TestWall.cpp">
       <SubType>
       </SubType>
     </ClCompile>
