--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -82,6 +82,9 @@
     <ClInclude Include="TestLevelMap.h">
       <Filter>3.Play\Test\Map</Filter>
     </ClInclude>
+    <ClInclude Include="TestWall.h">
+      <Filter>3.Play\Test\Actor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Player.cpp">
@@ -164,6 +167,9 @@
     </ClCompile>
     <ClCompile Include="TestLevelMap.cpp">
       <Filter>3.Play\Test\Map</Filter>
+    </ClCompile>
+    <ClCompile Include="TestWall.cpp">
+      <Filter>3.Play\Test\Actor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
